#proj-a chore: 리엑트 설치

--- a/packages/project-a/package.json
+++ b/packages/project-a/package.json
@@ -25,5 +25,8 @@
   },
   "bugs": {
     "url": "https://github.com/Developer-Mang/test-workspace/issues"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
