--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:cra": "npm run start -w react-cra"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,6 @@
     "create-react-app": "^5.0.1"
   },
   "workspaces": [
-    "./packages/*"
+    "packages\\react-cra"
   ]
 }
